--- a/README.org
+++ b/README.org
@@ -128,6 +128,16 @@ As a workaround I install zsh via apt, set ~/bin/zsh~ as LDAP Login shell and st
 - libtool
 - libtool-bin
 
+starting sway from login shell
+
+#+begin_src bash
+/usr/bin/sway --debug | tee $> /tmp/sway.log
+#+end_src
+
+- sway
+- swaylock
+- xwayland
+
 * Setup Syncthing
 * Configure logind on Debian 12
 
