readme: section about zsa udev rules
Signed-off-by: Stefan Lendl <s.lendl@proxmox.com>

--- a/README.org
+++ b/README.org
@@ -182,6 +182,54 @@ swaylock does not work (still true?) from nix.. so use swaylock from the system
 - swaylock :: [2023-10-03 Tue] swaylock from nix is broken
 - mtr-tiny :: mtr requires root and we cannot install into the system path from home-manager
 - nmap ::
+* Setup ZSA udev rules for ErgoDox EZ
+:PROPERTIES:
+:header-args:bash: :dir /sudo:: :results raw silent
+:END:
+
+I own three ErgoDox EZ (because I love them so much and want them everywhere).
+Installing ~zsh-udev-rules~ with home-manager installs the udev rules in ~~/.nix-profile/lib/udev/...~
+
+I want to direclty install the udev rules in Debian by following the [[https://github.com/zsa/wally/wiki/Linux-install][official tutorial]]
+
+#+begin_src bash
+DEBIAN_FRONTEND=noninteractive
+apt-get install -y libusb-1.0.0-dev
+#+end_src
+
+tangle the following to [[/etc/udev/rules.d/50-zsa.rules]]
+
+#+begin_src conf :tangle /sudo::/etc/udev/rules.d/50-zsa.rules
+# Rules for Oryx web flashing and live training
+KERNEL=="hidraw*", ATTRS{idVendor}=="16c0", MODE="0664", GROUP="plugdev"
+KERNEL=="hidraw*", ATTRS{idVendor}=="3297", MODE="0664", GROUP="plugdev"
+
+# Legacy rules for live training over webusb (Not needed for firmware v21+)
+  # Rule for all ZSA keyboards
+  SUBSYSTEM=="usb", ATTR{idVendor}=="3297", GROUP="plugdev"
+  # Rule for the Moonlander
+  SUBSYSTEM=="usb", ATTR{idVendor}=="3297", ATTR{idProduct}=="1969", GROUP="plugdev"
+  # Rule for the Ergodox EZ
+  SUBSYSTEM=="usb", ATTR{idVendor}=="feed", ATTR{idProduct}=="1307", GROUP="plugdev"
+  # Rule for the Planck EZ
+  SUBSYSTEM=="usb", ATTR{idVendor}=="feed", ATTR{idProduct}=="6060", GROUP="plugdev"
+
+# Wally Flashing rules for the Ergodox EZ
+ATTRS{idVendor}=="16c0", ATTRS{idProduct}=="04[789B]?", ENV{ID_MM_DEVICE_IGNORE}="1"
+ATTRS{idVendor}=="16c0", ATTRS{idProduct}=="04[789A]?", ENV{MTP_NO_PROBE}="1"
+SUBSYSTEMS=="usb", ATTRS{idVendor}=="16c0", ATTRS{idProduct}=="04[789ABCD]?", MODE:="0666"
+KERNEL=="ttyACM*", ATTRS{idVendor}=="16c0", ATTRS{idProduct}=="04[789B]?", MODE:="0666"
+
+# Keymapp / Wally Flashing rules for the Moonlander and Planck EZ
+SUBSYSTEMS=="usb", ATTRS{idVendor}=="0483", ATTRS{idProduct}=="df11", MODE:="0666", SYMLINK+="stm32_dfu"
+# Keymapp Flashing rules for the Voyager
+SUBSYSTEMS=="usb", ATTRS{idVendor}=="3297", MODE:="0666", SYMLINK+="ignition_dfu"
+#+end_src
+
+#+begin_src bash
+groupadd plugdev
+usermod -aG plugdev $USER
+#+end_src
 
 * Setup Syncthing
 * Configure logind on Debian 12
