install nvd and extend README for a nicer update script
Signed-off-by: Stefan Lendl <ste.lendl@gmail.com>

--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 #+title: My nix home-manager config
 
 #+begin_src bash
-nix run . -- build -b backup --flake .
+nix run . -- build --flake .
 #+end_src
 
 #+begin_src bash
@@ -11,16 +11,42 @@ nix run . -- switch -b backup --flake .
 
 * Update
 
-Update the flake
+#+begin_src bash
+nix flake update
+nix run . -- build --flake .
+nvd diff result /nix/var/nix/profiles/per-user/${USER}/home-manager
 
+read "Continue? [Enter] → Yes, [Ctrl]+[C] → No."
+nix run . -- switch -b backup --flake .
+#+end_src
+
+** Break down
+
+Update the flake
 #+begin_src bash
 nix flake update
 #+end_src
 
-Switch to the new version
+Build the new generation
 
 #+begin_src bash
-nix run . -- switch -b backup --flake .
+nix run . -- build --flake .
+#+end_src
+
+And compare the new version to the currently installed generation
+#+begin_src bash
+nvd diff result /nix/var/nix/profiles/per-user/${USER}/home-manager
+#+end_src
+
+Compare current-generation with X generation
+#+begin_src bash
+BASE_VERSION=265
+nvd diff /nix/var/nix/profiles/per-user/${USER}/home-manager{,-${BASE_VERSION}-link}
+#+end_src
+
+Compare two generations:
+#+begin_src bash
+nvd diff /nix/var/nix/profiles/per-user/${USER}/home-manager-{265,267}-link
 #+end_src
 
 Read the news
