--- a/README.org
+++ b/README.org
@@ -129,6 +129,7 @@ cat /etc/pam.d/swaylock
 
 auth include login
 #+end_quote
+
 ** TODO set nix installed zsh as default shell
 
 =NOTE= *this will not work on the Workstation at Proxmox with LDAP login because
@@ -316,21 +317,6 @@ usermod -a -G docker $USER
 #+end_src
 
 reboot
-* E-Mail setup
-
-after first installation, sync the mailbox
-=TODO= This should automatically be done by systemd services by now..
-
-#+begin_src bash
-mbsync -a
-#+end_src
-
-and init notmuch
-
-#+begin_src bash
-notmuch new
-#+end_src
-
 * Bashrc for root
 
 I am using the system frequently as root, so I want to have a decently
@@ -341,22 +327,6 @@ Symlink root's .bashrc to the config file in this repo.
 #+begin_src bash :dir /sudo:: :results value
 ln /home/slendl/.config/dotfiles/config/bash/.bashrc.root /root/.bashrc -sf
 #+end_src
-* Rust Development on Leah
-
-For Rust development at Proxmox, I need the Debian-based toolchain installed.
-I cannot use rustup from nixpkgs.
-
-For dev projects I can run the following to install dev dependencies
-
-#+begin_src bash :noeval
-sudo mk-build-deps -ir
-#+end_src
-
-Installing some global dependencies for my dev environment.
-
-#+begin_src bash :noeval
-sudo apt install rust-clippy rustfmt
-#+end_src
 * password-store
 
 #+begin_src bash :noeval
@@ -364,10 +334,11 @@ gpg --edit-key <password-store-key>
 > trust
 > 5 # trust ultimately
 #+end_src
+
 * org-protocol in Brave Brower
 
 [[https://www.reddit.com/r/emacs/comments/icjaie/orgprotocol_users_is_there_a_way_to_disable/][Redit about policy]]
-[[https://support.brave.com/hc/en-us/articles/360039248271-Group-Policy][Brave Docu]]
+[[https://support.brave.com/hc/en-us/articles/360039248271-Group-Policy][Brave Doku]]
 
 Install the org-protocol policy system-wide.
 Brave and Chrome do not seem to allow specifying policies in /home
