--- a/README.org
+++ b/README.org
@@ -481,6 +481,16 @@ agenix -e <name-of-secret>.age
 
 ~Emacs~ will open. Close with =SPC b k= to terminate the buffer and return to the shell
 
+** Add a new host
+
+- You need to first setup NixOS without agenix.
+  
+- Put the auto-generated ssh host public key ~/etc/ssh/ssh_host_ed25519_key.pub~
+  into secrets.nix
+  
+- run ~agenix --rekey~ while another private key that allows decrypting all
+  relevant keys is available.
+
 * Create a custom iso
 
 edit [[file:modules/iso.nix]]
